<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.komugirice.mapapp.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_preference"
        android:name="com.komugirice.mapapp.ui.preference.PreferenceFragment"
        android:label="@string/menu_preference"
        tools:layout="@layout/fragment_preference" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.komugirice.mapapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

</navigation>