<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>

            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/menu_map" />

            <item
                android:id="@+id/nav_preference"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_preference" />

            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
        </menu>
    </item>

    <!--
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mode"
            android:icon="@drawable/ic_menu_save"
            android:title="@string/menu_mode" />

        <item
            android:id="@+id/nav_mode_value"
            android:title="evernote" />

        <item
            android:id="@+id/nav_evernote"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_evernote" />

        <item
            android:id="@+id/nav_evernote_value"
            android:title="なし" />

    </group>
    -->

</menu>
